# cat-dogs-classifier

./: CMakeLists.txt  README.md
include/: layer.hpp  neural_network.hpp
src/: layer.cpp  main.cpp  neural_network.cpp
